# Real-time_fraud_detection_system

./: .gitignore  Makefile  README.md  docker-compose.yml  dremio-init.sh  pyproject.toml
Ml_model/: BaselineFeatureTransformation.ipynb  BaselineModeling .ipynb  SimulatedDataset.ipynb  customer_load.ipynb  shared_functions.py  terminal_load.ipynb  transactions_load.ipynb
cassandra/: cassandra.cql
connect/: Dockerfile  pg-src-connector.json  s3-sink.json
datagen/: Dockerfile  data_gen.py
dremio/: dremio.conf
fraud_detection_model/: data_generator.ipynb  feature_transformation.ipynb  model_training.ipynb  shared_functions.py
local_dev_notebooks/: dataread.ipynb  feature_customers.ipynb  feature_terminals.ipynb  feature_transactions.ipynb  job4.ipynb  kafka_s3-sinkterminal.ipynb  kafka_s3_sink_customers copy.ipynb  kafka_s3_sink_customers.ipynb  kafka_s3_sink_transactions.ipynb
postgres/: init.sql
pyspark/: Dockerfile
pyspark/scripts/: fraud_detection.py  kafka_s3_sink_customers.py  kafka_s3_sink_terminals.py  kafka_s3_sink_transactions.py  load_initial_data.py
superset/: Dockerfile  entrypoint.sh  superset_config.py
trino-config/catalog/: nessie.properties
