[project]
name = "realtime-fraud-detection-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Saurabh",email = "sauravtanwar786@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "pyspark (>=3.5.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

