[project]
name = "realtime-fraud-detection-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Saurabh",email = "sauravtanwar786@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pyspark = "^3.5.4"
psycopg2-binary = "^2.9.10"
graphviz = "^0.20.3"
imbalanced-learn = "^0.13.0"
matplotlib = "^3.10.0"
pandarallel = "^1.6.5"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
duckdb = "^1.2.0"
polars = "^1.22.0"
boto3 = "^1.36.20"

